--- a/index.html
+++ b/index.html
@@ -8,31 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <div class="cards">
+        <div class="card_big">
             <img src="./images/A.jpg" alt="a">
         </div>
-        <div class="cards">
+        <div class="card_normal">
             <img src="./images/B.jpg" alt="a">
         </div>
-        <div class="cards">
+        <div class="card_normal">
             <img src="./images/C.jpg" alt="a">
         </div>
-        <div class="cards">
+        <div class="card_small">
             <img src="./images/D.jpg" alt="a">
         </div>
-        <div class="cards">
+        <div class="card_small">
             <img src="./images/E.jpg" alt="a">
         </div>
-        <div class="cards">
+        <div class="card_normal">
             <img src="./images/F.jpg" alt="a">
         </div>
-        <div class="cards">
+
+        <div class="card_smaller">
             <img src="./images/G.jpg" alt="a">
         </div>
-        <div class="cards">
-            <img src="./images/H.jpg" alt="a">
+        <div class="card_smaller">
+            <img src="./images/G.jpg" alt="a">
         </div>
-        <div class="cards">
+       
+        
+        <div class="card_normal">
             <img src="./images/I.jpg" alt="a">
         </div>
     </div>
