--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
     <title>responsive_design</title>
 </head>
 <body>
+    <a href="./grid.html">grid</a>
     <div class="container">
         <div class="card_big">
             <img src="./images/A.jpg" alt="a">
         </div>
+
         <div class="card_normal">
             <img src="./images/B.jpg" alt="a">
         </div>
         <div class="card_normal">
             <img src="./images/C.jpg" alt="a">
         </div>
+
         <div class="card_small">
             <img src="./images/D.jpg" alt="a">
         </div>
         <div class="card_small">
             <img src="./images/E.jpg" alt="a">
         </div>
+
         <div class="card_normal">
             <img src="./images/F.jpg" alt="a">
         </div>
 
+        <!-- smaller card -->
         <div class="card_smaller">
             <img src="./images/G.jpg" alt="a">
         </div>
