--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="./grid.html">grid</a>
+    <a href="./gridarea.html">gridarea</a>
     <div class="container">
         <div class="card_big">
             <img src="./images/A.jpg" alt="a">
